dash_mantine_components: add basic

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,5 +5,10 @@ description = "Add your description here"
 authors = [ ]
 requires-python = ">=3.13"
 dependencies = [
-    "streamlit>=1.52.2",
+    "dash>=3.4.0",
+    "dash-mantine-components>=2.5.1",
+    "pandas>=3.0.0",
+    "plotly>=6.5.2",
+    "pytest>=9.0.2",
+    "requests>=2.32.5",
 ]
